# cecs

./: .gitignore  CMakeLists.txt  README.md  build.bat
cecs/: CMakeLists.txt  component_list.h  components.h  ecs.c  ecs.h  entity.h  main.c  system.c  system.h
cmake/: cecsConfig.cmake.in  install.cmake
examples/: CMakeLists.txt  main.c
include/cecs/: archetype.h  component.h  components.h  ecs.h  entity.h  system.h  view.h
src/: CMakeLists.txt  archetype.c  archetype_internal.h  component_internal.h  ecs.c  ecs_internal.h  view.c  view_internal.h
tests/: CMakeLists.txt  main.c  test_entity.h
